# intro-to-data-science

./: .gitignore  00_python_in_a_nutshell.ipynb  01_scientific_stack.ipynb  02_a_first_example.ipynb  LICENSE  LICENSE.txt  Pipfile  README.md  intro_to_machine_learning.ipynb  pyproject.toml  requirements.txt  tasks.py  workshop.ipynb
00_python_in_a_nutshell/: 00_content_arithmetic.ipynb  01_exercises_calculator.ipynb  02_content_logic.ipynb  03_exercises_loops.ipynb  04_exercises_fizz_buzz.ipynb  05_content_functions.ipynb  06_exercises_volume.ipynb  07_content_data_types.ipynb
01_scientific_stack/: 00_content.ipynb  00_content_numpy.ipynb  01_exercises_arrays.ipynb  02_content_pandas.ipynb  03_exercises_simple_queries.ipynb  orders.csv
03_classification/: 00_content.ipynb
