[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "intro-to-data-science"
version = "0.1.0"

authors = [
    "Alexander Hess <alexander@webartifex.biz>",
]
description = "An intro to data science for absolute beginners"
keywords = [
    "python",
    "data-science",
    "machine-learning",
    "matplotlib",
    "numpy",
    "seaborn",
    "sklearn",
]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/webartifex/intro-to-data-science"
repository = "https://github.com/webartifex/intro-to-data-science"

[tool.poetry.dependencies]
python = "^3.8"

jupyterlab = "^3.1"
matplotlib = "^3.4"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
