[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "intro-to-data-science"
version = "0.3.0.dev0"

authors = [
    "Alexander Hess <alexander@webartifex.biz>",
]
description = "An intro to data science for absolute beginners"
keywords = [
    "python",
    "data-science",
    "machine-learning",
    "matplotlib",
    "numpy",
    "seaborn",
    "sklearn",
]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/webartifex/intro-to-data-science"
repository = "https://github.com/webartifex/intro-to-data-science"

package-mode = false


[tool.poetry.dependencies]
python = "^3.9"

jupyterlab = "^4.2"
matplotlib = "^3.9"
numpy = "^2.0"
pandas = "^2.2"
scikit-learn = "^1.5"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4"}
invoke = "^2.2"
